--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -33,7 +33,8 @@ body {
       margin-right: 15px;
       pointer-events: none;
     }
-    h1, a{
+    h1,
+    a {
       font-size: 20px;
       color: #ffffff;
       font-weight: 100;
@@ -50,6 +51,47 @@ body {
     text-transform: uppercase;
     color: #ffffff;
     font-weight: 600;
-    
+    letter-spacing: 2px;
+  }
+}
+.modal {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.15);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  &__dialog {
+    padding-top: 75px;
+    width: 500px;
+    height: 300px;
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 10px;
+    &-content {
+      text-align: center;
+      color: #ffffff;
+      font-size: 24px;
+      font-weight: 700;
+      select {
+        font-family: "PT Sans", sans-serif;
+        color: #262626;
+        font-size: 18px;
+        width: 200px;
+        height: 40px;
+        padding-left: 5px;
+        text-align: center;
+        border-radius: 5px;
+        background-color: rgb(235, 229, 229);
+      }
+      h3 {
+        margin-bottom: 30px;
+        text-transform: uppercase;
+        font-weight: 300;
+        color: #f1f1f1;
+      }
+    }
   }
 }
