--- a/css/style.css
+++ b/css/style.css
@@ -121,12 +121,14 @@ body {
   margin-right: 15px;
   pointer-events: none;
 }
-.header__logo h1, .header__logo a {
+.header__logo h1,
+.header__logo a {
   font-size: 20px;
   color: #ffffff;
   font-weight: 100;
 }
-.header__logo h1 span, .header__logo a span {
+.header__logo h1 span,
+.header__logo a span {
   color: #63fd63;
   font-weight: 700;
 }
@@ -137,4 +139,47 @@ body {
   text-transform: uppercase;
   color: #ffffff;
   font-weight: 600;
+  letter-spacing: 2px;
+}
+
+.modal {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.15);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.modal__dialog {
+  padding-top: 75px;
+  width: 500px;
+  height: 300px;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 10px;
+}
+.modal__dialog-content {
+  text-align: center;
+  color: #ffffff;
+  font-size: 24px;
+  font-weight: 700;
+}
+.modal__dialog-content select {
+  font-family: "PT Sans", sans-serif;
+  color: #262626;
+  font-size: 18px;
+  width: 200px;
+  height: 40px;
+  padding-left: 5px;
+  text-align: center;
+  border-radius: 5px;
+  background-color: #ebe5e5;
+}
+.modal__dialog-content h3 {
+  margin-bottom: 30px;
+  text-transform: uppercase;
+  font-weight: 300;
+  color: #f1f1f1;
 }
