--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -1,7 +1,8 @@
 @import "null.scss";
-@import url("https://fonts.googleapis.com/css2?family=PT+Sans&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200&display=swap");
 body {
-  font-family: "PT Sans", sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 .wrapper {
   display: flex;
@@ -15,11 +16,11 @@ body {
 }
 .main {
   height: 100vh;
-  background: rgb(71, 71, 255);
+  background: rgb(114, 145, 199);
   background: linear-gradient(
     180deg,
-    rgba(71, 71, 255, 1) 0%,
-    rgba(0, 212, 255, 0.8631827731092436) 100%
+    rgba(114, 145, 199, 1) 0%,
+    rgba(236, 197, 190, 1) 100%
   );
 }
 .header {
@@ -37,9 +38,9 @@ body {
     a {
       font-size: 20px;
       color: #ffffff;
-      font-weight: 100;
+      font-weight: 300;
       span {
-        color: rgb(99, 253, 99);
+        color: #e1c0be;
         font-weight: 700;
       }
     }
@@ -49,49 +50,71 @@ body {
     margin-left: 25px;
     font-size: 32px;
     text-transform: uppercase;
-    color: #ffffff;
-    font-weight: 600;
-    letter-spacing: 2px;
+    color: rgb(236, 235, 234);
+    font-weight: 400;
   }
 }
-.modal {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.15);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  &__dialog {
-    padding-top: 75px;
-    width: 500px;
-    height: 300px;
-    background-color: rgba(255, 255, 255, 0.5);
-    border-radius: 10px;
-    &-content {
-      text-align: center;
+
+.weather {
+  max-width: 1000px;
+  background-color: #fff;
+  // background: url("/img/sky.png") center/cover no-repeat;
+  background-color: rgb(106, 106, 207);
+  border-radius: 25px;
+  margin: 0 auto;
+  &__main {
+    display: flex;
+    justify-content: space-between;
+    padding: 70px 120px 25px 120px;
+    align-items: center;
+  }
+  &__info-city {
+    font-size: 28px;
+    font-weight: 300;
+    color: #ffffff;
+    text-transform: uppercase;
+    line-height: 48px;
+  }
+  &__info-date {
+    font-size: 16px;
+    color: #ffffff;
+    font-weight: 500;
+  }
+  &__info-img {
+    margin-top: 15px;
+    height: 120px;
+    width: 120px;
+    background: url("/img/icons/cloud.svg") center/cover no-repeat;
+  }
+  &__info-descr {
+    font-size: 28px;
+    color: #ffffff;
+    font-weight: 500;
+  }
+  &__deg {
+    font-family: "Titillium Web", sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 42px;
+    color: #ffffff;
+    &-current {
+      font-size: 124px;
+      font-weight: 200;
       color: #ffffff;
-      font-size: 24px;
-      font-weight: 700;
-      select {
-        font-family: "PT Sans", sans-serif;
-        color: #262626;
-        font-size: 18px;
-        width: 200px;
-        height: 40px;
-        padding-left: 5px;
-        text-align: center;
-        border-radius: 5px;
-        background-color: rgb(235, 229, 229);
+    }
+    &-add {
+      margin-top: 15px;
+      display: flex;
+    }
+    &-max {
+      color: #e1c0be;
+      span {
+        color: #fff;
       }
-      h3 {
-        margin-bottom: 30px;
-        text-transform: uppercase;
-        font-weight: 300;
-        color: #f1f1f1;
-      }
+    }
+    &-min {
+      color: #939FC4;
     }
   }
 }
