--- a/css/style.css
+++ b/css/style.css
@@ -204,3 +204,20 @@ body {
 .weather__deg-min {
   color: #939FC4;
 }
+
+@media (max-width: 767px) {
+  .main {
+    padding: 15px;
+  }
+
+  .weather__main {
+    padding: 15px;
+  }
+
+  .weather__deg {
+    font-size: 32px;
+  }
+  .weather__deg-current {
+    font-size: 72px;
+  }
+}
