--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -22,7 +22,7 @@ body {
   //   rgba(114, 145, 199, 1) 0%,
   //   rgba(236, 197, 190, 1) 100%
   // );
-  background: url("/img/main_bg.jpg") center/cover no-repeat;
+  background: url("../img/main_bg.jpg") center/cover no-repeat;
 }
 .header {
   padding: 15px;
