--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -55,6 +55,7 @@ body {
   background-color: #fff;
   background-color: rgba(255, 255, 255, 0.18);
   margin: 0 auto;
+  margin-bottom: 120px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   .info {
     display: flex;
